--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,6 +7,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  direction: rtl;
+
 }
 article,
 aside,
@@ -619,4 +621,15 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+}
+
+.button{
+  width: fit-content;
+  align-self: center;
+  margin: 10px;
 }
