--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -622,10 +622,11 @@ pre tt:after {
   }
 }
 
-.container {
+.app-container {
   position: relative;
   display: flex;
   flex-direction: column;
+  text-align: right;
 }
 
 .buttonsContainer {
